# serializer version: 1
# name: test_get_discrete_gpu_index[\n   1  \n-1]
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'discreteIndex',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_get_discrete_gpu_index[\n\t 2   \t-2]
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'discreteIndex',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_get_discrete_gpu_index[\n\t\n       \t    -None]
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'discreteIndex',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_get_discrete_gpu_index_error
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'discreteIndex',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_get_discrete_gpu_name[\n   gpu 1  \n-gpu 1]
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'discreteName',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_get_discrete_gpu_name[\n\t gpu 2.4   \t-gpu 2.4]
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'discreteName',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_get_discrete_gpu_name[\n\t\n       \t    -None]
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'discreteName',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_get_discrete_gpu_name_error
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'discreteName',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_get_discrete_gpu_uuid[\n   UUID1  \n-UUID1]
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'discreteUUID',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_get_discrete_gpu_uuid[\n\t UUID2   \t-UUID2]
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'discreteUUID',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_get_discrete_gpu_uuid[\n\t\n       \t    -None]
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'discreteUUID',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_get_discrete_gpu_uuid_error
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'discreteUUID',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_get_version[\n   1.2.2  \n-1.2.2]
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'vulkanVersion',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_get_version[\n\t 1.3.12   \t-1.3.12]
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'vulkanVersion',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_get_version[\n\t\n       \t    -]
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'vulkanVersion',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_get_version_error
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'vulkanVersion',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_has_discrete_gpu[\n   wqreq  \n-False]
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'hasDiscrete',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_has_discrete_gpu[\n\t true   \t-True]
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'hasDiscrete',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_has_discrete_gpu_error
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'hasDiscrete',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_is_available[\n   wqreq  \n-False]
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'hasVulkan',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_is_available[\n\t true   \t-True]
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'hasVulkan',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
# name: test_is_available_error
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/bin/batocera-vulkan'),
          'hasVulkan',
        ]),
      ),
      dict({
        'text': True,
      }),
    ),
  ])
# ---
